--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -4,10 +4,10 @@
   year={2006}
 }
 
-@inproceedings{szegedy2015going,
+@article{szegedy2015going,
   title={Going deeper with convolutions},
   author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  journal={Proceedings of the IEEE conference on computer vision and pattern recognition},
   pages={1--9},
   year={2015}
 }
@@ -19,10 +19,10 @@
   year={2014}
 }
 
-@inproceedings{he2016deep,
+@article{he2016deep,
   title={Deep residual learning for image recognition},
   author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  journal={Proceedings of the IEEE conference on computer vision and pattern recognition},
   pages={770--778},
   year={2016}
 }
@@ -60,10 +60,10 @@
   publisher={Ieee}
 }
 
-@inproceedings{girshick2015fast,
+@article{girshick2015fast,
   title={Fast r-cnn},
   author={Girshick, Ross},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
+  journal={Proceedings of the IEEE international conference on computer vision},
   pages={1440--1448},
   year={2015}
 }
@@ -97,10 +97,10 @@
   publisher={MIT press}
 }
 
-@inproceedings{krizhevsky2012imagenet,
+@article{krizhevsky2012imagenet,
   title={Imagenet classification with deep convolutional neural networks},
   author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  booktitle={Advances in neural information processing systems},
+  journal={Advances in neural information processing systems},
   pages={1097--1105},
   year={2012}
 }
@@ -131,27 +131,27 @@
   year={2015}
 }
 
-@inproceedings{oh2015action,
+@article{oh2015action,
   title={Action-conditional video prediction using deep networks in atari games},
   author={Oh, Junhyuk and Guo, Xiaoxiao and Lee, Honglak and Lewis, Richard L and Singh, Satinder},
-  booktitle={Advances in neural information processing systems},
+  journal={Advances in neural information processing systems},
   pages={2863--2871},
   year={2015}
 }
 
-@inproceedings{abdel2012applying,
+@article{abdel2012applying,
   title={Applying convolutional neural networks concepts to hybrid NN-HMM model for speech recognition},
   author={Abdel-Hamid, Ossama and Mohamed, Abdel-rahman and Jiang, Hui and Penn, Gerald},
-  booktitle={2012 IEEE international conference on Acoustics, speech and signal processing (ICASSP)},
+  journal={2012 IEEE international conference on Acoustics, speech and signal processing (ICASSP)},
   pages={4277--4280},
   year={2012},
   organization={IEEE}
 }
 
-@inproceedings{deng2013new,
+@article{deng2013new,
   title={New types of deep neural network learning for speech recognition and related applications: An overview},
   author={Deng, Li and Hinton, Geoffrey and Kingsbury, Brian},
-  booktitle={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+  journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
   pages={8599--8603},
   year={2013},
   organization={IEEE}
@@ -168,10 +168,10 @@
   publisher={IEEE}
 }
 
-@inproceedings{hu2014convolutional,
+@article{hu2014convolutional,
   title={Convolutional neural network architectures for matching natural language sentences},
   author={Hu, Baotian and Lu, Zhengdong and Li, Hang and Chen, Qingcai},
-  booktitle={Advances in neural information processing systems},
+  journal={Advances in neural information processing systems},
   pages={2042--2050},
   year={2014}
 }
@@ -190,18 +190,18 @@
   year={2018}
 }
 
-@inproceedings{allen2019learning,
+@article{allen2019learning,
   title={Learning and generalization in overparameterized neural networks, going beyond two layers},
   author={Allen-Zhu, Zeyuan and Li, Yuanzhi and Liang, Yingyu},
-  booktitle={Advances in neural information processing systems},
+  journal={Advances in neural information processing systems},
   pages={6155--6166},
   year={2019}
 }
 
-@inproceedings{li2018learning,
+@article{li2018learning,
   title={Learning overparameterized neural networks via stochastic gradient descent on structured data},
   author={Li, Yuanzhi and Liang, Yingyu},
-  booktitle={Advances in Neural Information Processing Systems},
+  journal={Advances in Neural Information Processing Systems},
   pages={8157--8166},
   year={2018}
 }
@@ -227,10 +227,10 @@
   year={2019}
 }
 
-@inproceedings{du2018many,
+@article{du2018many,
   title={How many samples are needed to estimate a convolutional neural network?},
   author={Du, Simon S and Wang, Yining and Zhai, Xiyu and Balakrishnan, Sivaraman and Salakhutdinov, Russ R and Singh, Aarti},
-  booktitle={Advances in Neural Information Processing Systems},
+  journal={Advances in Neural Information Processing Systems},
   pages={373--383},
   year={2018}
 }
@@ -256,10 +256,10 @@
   year={2018}
 }
 
-@inproceedings{brutzkus2017globally,
+@article{brutzkus2017globally,
   title={Globally optimal gradient descent for a convnet with gaussian inputs},
   author={Brutzkus, Alon and Globerson, Amir},
-  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
+  journal={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
   pages={605--614},
   year={2017},
   organization={JMLR. org}
@@ -272,10 +272,10 @@
   year={2018}
 }
 
-@inproceedings{cao2019generalization,
+@article{cao2019generalization,
   title={Generalization bounds of stochastic gradient descent for wide and deep neural networks},
   author={Cao, Yuan and Gu, Quanquan},
-  booktitle={Advances in Neural Information Processing Systems},
+  journal={Advances in Neural Information Processing Systems},
   pages={10835--10845},
   year={2019}
 }
@@ -287,10 +287,10 @@
   year={2017}
 }
 
-@inproceedings{kawaguchi2016deep,
+@article{kawaguchi2016deep,
   title={Deep learning without poor local minima},
   author={Kawaguchi, Kenji},
-  booktitle={Advances in neural information processing systems},
+  journal={Advances in neural information processing systems},
   pages={586--594},
   year={2016}
 }
@@ -334,5 +334,21 @@
   title={Size-free generalization bounds for convolutional neural networks},
   author={Long, Philip M and Sedghi, Hanie},
   journal={arXiv preprint arXiv:1905.12600},
+  year={2019}
+}
+
+@article{jacot2018neural,
+  title={Neural tangent kernel: Convergence and generalization in neural networks},
+  author={Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
+  journal={Advances in neural information processing systems},
+  pages={8571--8580},
+  year={2018}
+}
+
+@article{arora2019exact,
+  title={On exact computation with an infinitely wide neural net},
+  author={Arora, Sanjeev and Du, Simon S and Hu, Wei and Li, Zhiyuan and Salakhutdinov, Russ R and Wang, Ruosong},
+  journal={Advances in Neural Information Processing Systems},
+  pages={8139--8148},
   year={2019}
 }
