--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -9,7 +9,7 @@
 近几年，有越来越多的研究者开始对神经网络算法的正确性，有效性进行理论的研究\cite{du2018gradient,allen2019learning,li2018learning,allen2018convergence,brutzkus2017sgd,arora2019fine}。然而，因为卷积神经网络的结构较全连接网络的结构更加复杂，以卷积神经网络理论为主要研究对象的研究还较少。
 
 \par
-本文将总结现有文献中的建模方法，以及证明方法，给出现有研究者对卷积神经网络理论研究的主要结果。
+本文将总结现有文献中的建模方法，以及证明方法，给出现有研究者对卷积神经网络理论研究的主要结果。\citet{du2018many}基于对数据分布和噪声的次高斯分布假设，对于单层卷积层与单层平均池化层和单层全连接层分别组合成的两层神经网络证明了网络的泛化能力仅与数据量的倒数和网络宽度成平方根关系的上界和下界，其中下界与数据维度无关；\citet{zhou2018understanding}考虑了多层卷积神经网络，他们对神经网络在训练过程上的Optimization能力和在测试数据上的Generalization能力之间的差距给出了一个与每层网络的大小成多项式关系的上界；\citet{long2019size}利用网络在训练集上误差对网络的泛化能力给出了估计，并且估计与网络的大小无关，而只与卷积核大小以及数据量有关。
 \begin{figure}
 \centering
 \includegraphics[width=12cm]{./figures/nn.png}
